fixes about page alignment, cleans up blog page

--- a/css/style.css
+++ b/css/style.css
@@ -91,8 +91,6 @@ a:hover {
 
 .about .body .picture {
   position: relative;
-  width: 100%;
-  float: left;
   z-index: 9;
 }
 
@@ -215,4 +213,55 @@ a:hover {
 
 .card .description {
   margin: 0.5em 0 0 0;
+}
+
+
+/* BLOG */
+
+.blog-header {
+  width: 100%;
+  height: auto;
+  background: #fff;
+  /*text-align: center;*/
+}
+
+.blog-header .blog-title {
+  margin: 0 0 30px;
+  font-weight: 400;
+  font-size: 52px;
+  color: #444;
+  letter-spacing: -.02em;
+  line-height: 1.1;
+  padding: 0 3rem 0 3rem;
+}
+
+.blog-header .top {
+  width: 100%;
+  height: 50px;
+}
+
+.blog-header .sub-title {
+  margin-bottom: 35px;
+  opacity: .7;
+  font-size: 25px;
+  line-height: 30px;
+  margin-top: 20px;
+  padding: 0 3rem 2rem 3rem;
+}
+
+.blog-header .bottom {
+  width: 100%;
+  padding: 0 3rem 2rem 3rem;
+  text-align: left;
+  color: rgb(186, 186, 186);
+  font-family: "Noto Sans", sans-serif;
+  font-size: 14px;
+}
+
+.blog-header .date {
+  margin-right: 3rem;
+  margin-top: 1rem;
+  color: rgb(186, 186, 186);
+  font-family: "Noto Sans", sans-serif;
+  font-size: 14px;
 }
